Presets and scenic camera.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,17 @@
 cmake_minimum_required(VERSION 3.22) # CMake version check
 project(app)                         # Create project "app"
-set(CMAKE_CXX_STANDARD 20)           # Enable C++20 standardq
+set(CMAKE_CXX_STANDARD 20)           # Enable C++20 standard
+
+# Build configuration defines
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    add_compile_definitions(BUILD_DEBUG)
+else()
+    add_compile_definitions(BUILD_RELEASE)
+endif()
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/pandora/cmake/shared)
 
-# Enable compile commands for clangd, which is used by Cursor.
+# Enable compile commands for clangd.
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_custom_target(setup_compile_commands ALL
