--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "pandora"]
 	path = pandora
-	url = git@codeberg.org/pedronunes/pandora.git
+	url = git@codeberg.org:pedronunes/pandora.git
